# sigma-instrumentation

./: Cargo.toml  README.md
.cargo/: config.toml
.github/workflows/: ci.yml
co-pilot-telemetry/: Cargo.toml
co-pilot-telemetry/src/: can.rs  m7_dbc.rs  protocol.rs  state.rs
instrumentation/src/: dashboard.rs  display.rs  gauge.rs
instrumentation/ui/: app.slint
instrumentation/ui/widgets/: speed_readout.slint
sigma-instrumentation/: Cargo.toml
sigma-instrumentation/src/: buttons.rs  camera.rs  heading.rs  lib.rs  theme.rs  updates.rs  windows.rs
sigma-instrumentation/src/connectivity/: mod.rs
sigma-instrumentation/src/dashboard/: gauge_art.rs
sigma-instrumentation/src/display/: config.rs  mod.rs  window.rs
sigma-instrumentation/src/updates/: ota.rs
sigma-instrumentation/src/windows/: mod.rs
sigma-instrumentation/ui/: app.slint  road_dashboard.slint  theme.slint
sigma-instrumentation/ui/fonts/: LICENSE-operation-napalm.txt
sigma-instrumentation/ui/widgets/: boot_splash.slint  harness_bar.slint  rpm_dial.slint  telemetry_overlay.slint
sigma-instrumentation/ui/windows/: camera.slint  common.slint  compass_gps.slint  connectivity.slint  diagnostics.slint  fuel.slint  maintenance.slint  navigation.slint  security.slint  systems.slint  updates.slint
sigma-racer/: Cargo.toml
sigma-racer-wingman-m7-can/: Cargo.toml
sigma-racer-wingman-m7-can/src/: lib.rs
sigma-racer-wingman-telemetry/: Cargo.toml
sigma-racer-wingman-telemetry/src/: can.rs  client.rs  lib.rs  protocol.rs  socket.rs  state.rs
sigma-racer/src/: main.rs  telemetry.rs
testbed/: Cargo.toml
testbed/src/: connectivity_sim.rs  main.rs  replay.rs  sim.rs
vehicle-service/: Cargo.toml
vehicle-service/src/: broadcast.rs  can_bus.rs  can_log.rs  env.rs  main.rs  sim.rs  source.rs
