[package]
name = "co-pilot-telemetry"
description = "Co-Pilot VSS telemetry protocol, CAN decode, and IPC client"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
publish.workspace = true

[dependencies]
dbc-rs = { version = "0.5.2", default-features = false, features = ["std"] }
chrono = { version = "0.4", default-features = false, features = ["clock", "std", "serde"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
