[package]
name = "sigma-racer-wingman-m7-can"
description = "Sigma Racer Wingman M7 safety-bus CAN dictionary and codec (no_std)"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
publish.workspace = true

[features]
default = ["std"]
# Linux consumers (vehicle-service) use `std`, which brings the lazily-cached
# `dbc()` helper. `no_std` firmware selects `alloc` or `heapless` instead.
std = ["alloc", "dbc-rs/std"]
alloc = ["dbc-rs/alloc"]
heapless = ["dbc-rs/heapless"]

[dependencies]
# Pinned to the 0.5 line so a single dbc-rs version stays in the tree and the
# parsed `Dbc` remains type-compatible with mdf4-rs's `CanDbcLogger`.
dbc-rs = { version = "0.5", default-features = false }
