[package]
name = "sigma-racer-wingman-telemetry"
description = "Sigma Racer Wingman VSS telemetry protocol, CAN decode, and IPC client"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
publish.workspace = true

[dependencies]
sigma-racer-wingman-m7-can = { workspace = true }
chrono = { version = "0.4", default-features = false, features = ["clock", "std", "serde"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
