[package]
name = "sigma-racer"
description = "Sigma Racer product app — Co-Pilot cluster binary (sigma-dash)"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
publish.workspace = true
build = "build.rs"

[[bin]]
name = "sigma-dash"
path = "src/main.rs"

[dependencies]
instrumentation = { workspace = true }
co-pilot-telemetry = { workspace = true }
slint = { workspace = true }
chrono = { workspace = true }

[build-dependencies]
