[package]
name = "sigma-racer"
description = "Sigma Racer product app — Wingman cluster binary (sigma-dash)"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
publish.workspace = true
build = "build.rs"

[[bin]]
name = "sigma-dash"
path = "src/main.rs"

[dependencies]
sigma-instrumentation = { workspace = true }
sigma-racer-wingman-telemetry = { workspace = true }
slint = { workspace = true }
chrono = { workspace = true }

[build-dependencies]
