[package]
name = "testbed"
description = "Component testbed — candump replay and desktop panel testing"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
homepage.workspace = true
publish.workspace = true
build = "build.rs"

[[bin]]
name = "testbed"
path = "src/main.rs"

[dependencies]
sigma-instrumentation = { workspace = true }
sigma-racer-telemetry = { path = "../../sigma-racer/telemetry" }
slint = { workspace = true }
chrono = { workspace = true }
rfd = "0.17.2"
image = { version = "0.25.10", default-features = false, features = ["png"] }

[build-dependencies]
